// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BUTTON> test every button 1`] = `
<button
  class="globalStyles__MainEngineButton-twski7-0 eylqge"
>
  text
</button>
`;

exports[`<BUTTON> test every single button 1`] = `
<button
  class="globalStyles__MainEngineButton-sc-5nguut-0 whdmm"
>
  text
</button>
`;
